# dbt-cloud-demo

./: .gitignore  README.md  pyproject.toml
src/dbt_cloud_demo/defs/dbt_cloud/: component.py  defs.yaml
